--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a>
+
+        <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
+    </nav>
 </head>
 <body>
     <h1>Projects</h1>
