--- a/contact/index.html
+++ b/contact/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-</head>
-<body>
-    <h1>Contact</h1>
-
+    
     <nav>
         <a href="../index.html">Home</a>
         <a href="../Projects/index.html">Projects</a>
         <a href="index.html">Contact</a>
+
+        <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
     </nav>
+</head>
+<body>
+    <h1>Contact</h1>
 </body>
 </html>
