--- a/contact/index.html
+++ b/contact/index.html
@@ -15,5 +15,7 @@
 </head>
 <body>
     <h1>Contact</h1>
+
+    <form action="mailto:YOUR_EMAIL_ADDRESS" method="POST" enctype="text/plain"></form>
 </body>
 </html>
