--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Zijin Qin</h1>
-    <p>Hello, I'm an ordinary girl who loves adventures. I also enjoy eating apple pie and taking pictures of things I like.</p>
+    <p>Hello, I'm an ordinary girl who loves to have fun and be happy. I also enjoy eating apple pie and taking pictures of things I like.</p>
 
     <img src="images/christmas_cake_pop.jpg" alt="White cake pop decorated with red and green sprinkles">
 </body>
