--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,6 @@
 <body>
     <h1>Contact</h1>
 
-    <form action="mailto:YOUR_EMAIL_ADDRESS" method="POST" enctype="text/plain"></form>
+    <form action="mailto:86121547+zijin-qin@users.noreply.github.com" method="POST" enctype="text/plain"></form>
 </body>
 </html>
