--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,17 @@
 <body>
     <h1>Contact</h1>
 
-    <form action="mailto:86121547+zijin-qin@users.noreply.github.com" method="POST" enctype="text/plain"></form>
+    <form action="YOUR_EMAIL_ADDRESS" method="POST" enctype="text/plain">
+        <label for="email">Email:</label>
+        <input name="email" type="email">
+
+        <label for="email">Subject:</label>
+        <input name="subject">
+
+        <label for="email">Body:</label>
+        <textarea name="body"></textarea>
+
+        <button>Submit</button>
+    </form>
 </body>
 </html>
