--- a/projects/index.html
+++ b/projects/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="../style.css">
+
     <nav>
         <a href="../index.html">Home</a>
         <a href="index.html">Projects</a>
