--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Contact</h1>
 
-    <form action="86121547+zijin-qin@users.noreply.github.com" method="POST" enctype="text/plain">
+    <form action="mailto:86121547+zijin-qin@users.noreply.github.com" method="POST" enctype="text/plain">
         <label for="email">Email:</label>
         <input name="email" type="email">
 
