--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zijin Qin: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css">
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="contact/index.html">Contact</a>
+
+        <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
+    </nav>
 </head>
 <body>
     <h1>Zijin Qin</h1>
