--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
     
     <nav>
         <a href="../index.html">Home</a>
-        <a href="../Projects/index.html">Projects</a>
+        <a href="../projects/index.html">Projects</a>
         <a href="index.html">Contact</a>
 
         <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
