Change mailto test

--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Contact</h1>
 
-    <form action="mailto:foo@example.com" method="POST" enctype="text/plain">
+    <form action="mailto:YOUR_EMAIL_ADDRESS" method="POST" enctype="text/plain">
         <label for="email">Email:</label>
         <input name="email" type="email">
 
