--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,7 @@
         <a href="../contact/index.html">Contact</a>
 
         <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
+        <a href="index.html">Resume</a>
     </nav>
 </head>
 <body>
