--- a/resume/index.html
+++ b/resume/index.html
@@ -9,12 +9,14 @@
 <body>
     <header>
         <nav>
-            <a href="../index.html">Home</a>
-            <a href="../projects/index.html">Projects</a>
-            <a href="../contact/index.html">Contact</a>
-    
-            <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
-            <a href="index.html">Resume</a>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
+        
+                <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
+                <li><a href="index.html">Resume</a></li>
+            </ul>
         </nav>
     </header>
     <h1>Resume</h1>
