--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zijin Qin: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css">
-
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="projects/index.html">Projects</a>
-        <a href="contact/index.html">Contact</a>
-
-        <a href="https://github.com/zijin-qin" target="_blank">My GitHub</a>
-        <a href="index.html">Resume</a>
-    </nav>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
+        
+                <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
+                <li><a href="../resume/index.html">Resume</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Zijin Qin</h1>
     <p>Hello, I'm an ordinary girl who loves to have fun and be happy. I also enjoy eating apple pie and taking pictures of things I like.</p>
 
