--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a href="./index.html">Contact</a></li>
         
                 <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
                 <li><a href="../resume/index.html">Resume</a></li>
