--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="../projects/index.html">Projects</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
         
