--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Projects</a></li>
+                <li><a href="./index.html">Projects</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
         
                 <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
