--- a/resume/index.html
+++ b/resume/index.html
@@ -15,11 +15,11 @@
                 <li><a href="../contact/index.html">Contact</a></li>
         
                 <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
-                <li><a href="index.html">Resume</a></li>
+                <li><a href="./index.html">Resume</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <h1>Resume</h1>
 </body>
 </html>
