--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="../contact/index.html">Contact</a></li>
+                <li><a href="projects/index.html">Projects</a></li>
+                <li><a href="contact/index.html">Contact</a></li>
         
                 <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
-                <li><a href="../resume/index.html">Resume</a></li>
+                <li><a href="resume/index.html">Resume</a></li>
             </ul>
         </nav>
     </header>
