add CSS styling

--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="./index.html">Contact</a></li>
+                <li><a class="current" href="./index.html">Contact</a></li>
         
                 <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
                 <li><a href="../resume/index.html">Resume</a></li>
@@ -23,14 +23,11 @@
     <h1>Contact</h1>
 
     <form action="mailto:YOUR_EMAIL_ADDRESS" method="POST" enctype="text/plain">
-        <label for="email">Email:</label>
-        <input name="email" type="email">
+        <label for="email">Email:<input name="email" type="email"></label>
 
-        <label for="email">Subject:</label>
-        <input name="subject">
+        <label for="email">Subject:<input name="subject"></label>
 
-        <label for="email">Body:</label>
-        <textarea name="body"></textarea>
+        <label for="email">Body:<textarea name="body"></textarea></label>
 
         <button>Submit</button>
     </form>
