--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./index.html">Projects</a></li>
+                <li><a class="current" href="./index.html">Projects</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
         
                 <li><a href="https://github.com/zijin-qin" target="_blank">My GitHub</a></li>
@@ -21,5 +21,67 @@
     </header>
 
     <h1>Projects</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae quo non tempora neque ullam eligendi dolorem reprehenderit, fugit quod voluptatum sapiente voluptatem harum numquam necessitatibus dolores explicabo deleniti consequuntur laboriosam.</p>
+        </article>
+        <article>
+            <h2>Magnam nam minus mollitia.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Cupiditate quo voluptas aut, maxime doloribus iste voluptate. Dolorum ea ipsam eveniet nihil corporis, culpa quas laudantium ipsa modi tenetur officia obcaecati, cum est enim laboriosam! Totam et commodi quos.</p>
+        </article>
+        <article>
+            <h2>Ab harum provident voluptas.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aliquam necessitatibus quo maiores minus aspernatur accusamus inventore? Rem obcaecati, quibusdam debitis delectus optio sequi. Suscipit quod voluptate voluptates cumque obcaecati tempora, laboriosam maiores earum in, perspiciatis aperiam vitae minus?</p>
+        </article>
+        <article>
+            <h2>Recusandae quaerat voluptatibus aperiam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Magni nesciunt sed voluptates quis incidunt voluptatibus saepe veniam consequatur placeat suscipit, necessitatibus tenetur modi aliquam cupiditate excepturi quia quam quisquam debitis reprehenderit qui repellendus? Doloremque distinctio omnis temporibus quae.</p>
+        </article>
+        <article>
+            <h2>Magnam sequi illum nulla?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Earum, ipsa. Eos sit voluptatum odit nihil tempora itaque, optio aut fugit! Labore in sequi architecto sit placeat fugiat doloribus, impedit a, dolorum nulla fuga dolorem aliquam ipsam. Tenetur, esse.</p>
+        </article>
+        <article>
+            <h2>At repellendus praesentium ad!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Alias similique dicta facilis dolor blanditiis. Inventore dolor provident veritatis esse placeat autem porro, obcaecati accusantium quae molestiae eum incidunt atque! Voluptatum illum accusantium quasi omnis inventore aspernatur dolorem praesentium!</p>
+        </article>
+        <article>
+            <h2>Iste asperiores facilis amet.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Ducimus, dolorem officiis ipsam cupiditate sint placeat deleniti inventore eius reiciendis nobis, mollitia laborum in obcaecati quasi nisi beatae itaque aperiam unde at accusantium, ex consequuntur nam maxime. Hic, error!</p>
+        </article>
+        <article>
+            <h2>Animi quas ipsum fugiat.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Minus in aliquid voluptate, blanditiis aspernatur, illum possimus perferendis fuga tempore error, magni modi maiores dolore nam libero recusandae ratione molestias nihil debitis amet iste minima inventore repellendus? Ut, et.</p>
+        </article>
+        <article>
+            <h2>Asperiores quos fuga soluta.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Odit repellat harum fuga eos dolore, rerum ea illum soluta provident culpa eum perspiciatis totam. Repellendus fugit, libero possimus nesciunt, debitis odit minus blanditiis non quis voluptate cupiditate dolorem quidem!</p>
+        </article>
+        <article>
+            <h2>Accusamus quis dolore itaque.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>In modi soluta magnam laudantium repellat magni dolorum mollitia vitae, excepturi, dolore a laboriosam quas animi consequuntur esse exercitationem praesentium aspernatur ipsum quis placeat molestias. Aspernatur illum quo quia repellendus!</p>
+        </article>
+        <article>
+            <h2>Maiores ad reiciendis neque?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Perspiciatis veritatis, cum eveniet unde, autem tempore adipisci aut nisi hic eaque eum sint temporibus doloremque? Debitis laudantium, est, et nulla optio impedit quibusdam culpa amet vitae provident recusandae asperiores.</p>
+        </article>
+        <article>
+            <h2>Reiciendis labore sint eos?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Commodi eligendi quidem saepe eius eaque modi est, voluptas nisi sit totam quo rerum quaerat laborum sapiente aliquam. Impedit ipsa mollitia iste totam reprehenderit dolorum quidem cupiditate sequi dolorem incidunt?</p>
+        </article>
+    </div>
 </body>
 </html>
