fix target blank on resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -50,7 +50,7 @@
         <h2>Projects</h2>
         <article>
             <h3>Food Recipe Analysis (Machine Learning-Based)</h3>
-            <p><i>Project link: </i><a target="_blank" href="https://zijin-qin.github.io/food-recipe-analysis/">Food Recipe Analysis by Bhagya Ram and Zijin Qin</a></p>
+            <p><i>Project link: </i><a href="https://zijin-qin.github.io/food-recipe-analysis/" target="_blank">Food Recipe Analysis by Bhagya Ram and Zijin Qin</a></p>
             <ul>
                 <li>Analyzed the correlation between saturated fat content and recipe ratings through hypothesis testing.</li>
                 <li>Designed and implemented a regression model to evaluate how preparation time impacts recipe ratings.</li>
