--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zijin Qin: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="global.js"></script>
 </head>
 <body>
     <header>
