fix nav bar links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Zijin Qin: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="global.js"></script>
+
+    <base href="/portfolio/">
 </head>
 <body>
     <h1>Zijin Qin</h1>
