--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <script type="module" src="../global.js"></script>
 
-    <base href="/portfolio/">
+    <base href="../portfolio/">
 </head>
 <body>
     <h1>Zijin Qin (Jin)</h1>
