--- a/projects/index.html
+++ b/projects/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css">
-    <script type="module" src="../global.js"></script>
+    <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
 </head>
 <body>
     <h1>Projects</h1>
     <div class="projects">
-        <article>
+        <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae quo non tempora neque ullam eligendi dolorem reprehenderit, fugit quod voluptatum sapiente voluptatem harum numquam necessitatibus dolores explicabo deleniti consequuntur laboriosam.</p>
@@ -69,7 +70,7 @@
             <h2>Reiciendis labore sint eos?</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Commodi eligendi quidem saepe eius eaque modi est, voluptas nisi sit totam quo rerum quaerat laborum sapiente aliquam. Impedit ipsa mollitia iste totam reprehenderit dolorum quidem cupiditate sequi dolorem incidunt?</p>
-        </article>
+        </article> -->
     </div>
 </body>
 </html>
