add project data

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
     <p>Hello, I'm an ordinary girl who loves to have fun and be happy. I also enjoy eating apple pie and taking pictures of things I like.</p>
 
     <img src="images/christmas_cake_pop.jpg" alt="White cake pop decorated with red and green sprinkles">
+
+    <h2>Latest Projects</h2>
+    <div class="projects">
+        <!-- Dynamically added content will appear here -->
+    </div>
+    <script src="index.js" type="module" defer></script>
+
+    <h2>My GitHub Stats</h2>
+    <div id="profile-stats">
+        <!-- Dynamic profile data will be inserted here -->
+    </div>
 </body>
 </html>
