add interactive pie chart for projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,11 +6,22 @@
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
 </head>
 <body>
     <h1 class="projects-title">Projects</h1>
-    <div class="projects"></div>
 
-    <script src="projects.js" type="module"></script>
+    <div class="container">
+        <svg id="projects-plot" viewBox="-50 -50 100 100"></svg>
+        <ul class="legend"></ul>
+        <input
+            class="searchBar"
+            type="search"
+            aria-label="Search projects"
+            placeholder="🔍 Search projects…"
+        />
+    </div>
+
+    <div class="projects"></div>
 </body>
 </html>
