--- a/meta/index.html
+++ b/meta/index.html
@@ -6,10 +6,33 @@
     <title>Meta</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../global.js" type="module"></script>
+    <script src="main.js" type="module"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <h1>Meta</h1>
-
     <p>This page includes stats of the code used to build this website.</p>
+
+    <div id="stats">
+        <h2>Summary</h2>
+    </div>
+
+    <h2>Commits by time of day</h2>
+    <div id="chart"></div>
+
+    <dl id="commit-tooltip" class="info tooltip">
+        <dt>Commit</dt>
+        <dd>
+            <a href="" id="commit-link" target="_blank"></a>
+        </dd>
+      
+        <dt>Date</dt>
+        <dd id="commit-date"></dd>
+      
+        <!-- Add: Time, author, lines edited -->
+    </dl>
+
+    <p id="selection-count">No commits selected</p>
+    <dl id="language-breakdown" class="stats"></dl>
 </body>
 </html>
